User logs in and saved to database

--- a/views/users/new.html
+++ b/views/users/new.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <h2>Signup to Makers BnB</h2>
-    <form class="" action="" method="">
+    <form class="" action="/users/new" method="POST">
       <input id="email-address" type="text" name="email" value="" placeholder="Enter email">
       <input id="password" type="text" name="password" value="" placeholder="Password">
-      <input type="submit" name="signup" value="signup">
+      <input type="submit" id='signup' value="signup">
     </form>
   </body>
 </html>
