--- a/views/spaces/viewspaces.ejs
+++ b/views/spaces/viewspaces.ejs
@@ -1,3 +1,5 @@
+<%= message %>
+
 <ul>
 <% for(var i=0; i<spaces.length; i++) { %>
   <li><%= spaces[i]['title'] %> - <%= spaces[i]['description'] %> - <%= spaces[i]['price'] %> - <%= spaces[i].users.email %></li>
