--- a/views/spaces/spaces.html
+++ b/views/spaces/spaces.html
@@ -1,6 +1,47 @@
-<form method="post" action="/spaces/new">
-  Title: <input type="text" name="title"><br>
-  Space description: <input type="text" name="description"><br>
-  Price per night (GBP): <input type="number" name="price"><br>
-  <input type="submit" value="Add space">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Makers BnB</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" media="screen"
+    href="http://tarruda.github.com/bootstrap-datetimepicker/assets/css/bootstrap-datetimepicker.min.css">
+  </head>
+
+<body>
+  <form method="post" action="/spaces/new">
+    Title: <input type="text" name="title"><br>
+    Space description: <input type="text" name="description"><br>
+    Price per night (GBP): <input type="number" name="price"><br>
+
+    Choose a date:
+    <div id="datepicker" class="input-append">
+      <input type="text" name="date"></input>
+      <span class="add-on">
+        <i data-date-icon="icon-calendar"></i>
+      </span>
+    </div>
+
+      <script type="text/javascript"
+       src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js">
+      </script>
+      <script type="text/javascript"
+       src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js">
+      </script>
+      <script type="text/javascript"
+       src="http://tarruda.github.com/bootstrap-datetimepicker/assets/js/bootstrap-datetimepicker.min.js">
+      </script>
+      <script type="text/javascript"
+       src="http://tarruda.github.com/bootstrap-datetimepicker/assets/js/bootstrap-datetimepicker.pt-BR.js">
+      </script>
+
+      <script type="text/javascript">
+      $(document).ready(function () {
+        $('#datepicker').datetimepicker({
+          format: 'dd/MM/yyyy',
+        });
+      });
+      </script>
+    <input type="submit" value="Add space">
 </form>
