--- a/views/spaces/viewspaces.ejs
+++ b/views/spaces/viewspaces.ejs
@@ -1,3 +1,3 @@
 <% for(var i=0; i<spaces.length; i++) { %>
-  <%= spaces[i]['title'] %> - <%= spaces[i]['description'] %> - <%= spaces[i]['price'] %>
+  <%= spaces[i]['title'] %> - <%= spaces[i]['description'] %> - <%= spaces[i]['price'] %> - <%= spaces[i]['date'] %>   <a href='<%="/spaces/request/"+ spaces[i]["id"]%>'  />
 <% } %>
