Validation of password and email + error messages

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -5,7 +5,9 @@
     <title>Login to Makers BnB</title>
   </head>
   <body>
+
       <h1>Login Makers BnB</h1>
+      <%= message %>
       <form class="" action="/users/login" method="post">
         <input id="email-address" type="text" name="email" value="" placeholder="Enter email">
         <input id="password" type="text" name="password" value="" placeholder="Password">
