--- a/views/spaces/viewspaces.ejs
+++ b/views/spaces/viewspaces.ejs
@@ -2,9 +2,11 @@
 <%= message %>
 
 <ul>
-<% for(var i=0; i<spaces.length; i++) { %>
+<%
+for(var i=0; i<spaces.length; i++) { %>
   <%= spaces[i]['title'] %> - <%= spaces[i]['description'] %> - <%= spaces[i]['price'] %> - <%= spaces[i].users.email %> - <%= spaces[i]['date'] %>
-  <input type="button" onclick="location.href='<%="/spaces/request/"+ spaces[i]["id"]%>';" value="Request Space"/>
+  <input type="button" onclick="location.href='/requests';" value="Request Space"/>
   <br>
-<% } %>
+<% }
+%>
 </ul>
