--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Makers BnB</title>
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen">
   </head>
   <body>
-    <h1>Makers BnB</h1>
-    <%= message %>
+    <div class="row">
+      <div class="col-md-8">
+        <h1>Makers BnB</h1>
+      </div>
+      <div class="col-md-4">
+        <button onclick="window.location.href='/users/login'" class="btn-default">Login</button>
+        <button onclick="window.location.href='/users/new'" class="btn-default">Signup</button>
+      </div>
+      <%= message %>
+    </div>
+    <div class="row hero">
+      <div class="col-md-8">
+        <h2>test</h2>
+      </div>
+      <div class="col-md-4">
+
+      </div>
+    </div>
+
   </body>
 </html>
