Styling web pages

--- a/views/spaces/spaces.html
+++ b/views/spaces/spaces.html
@@ -10,6 +10,8 @@
   </head>
 
 <body>
+  <h3><a href="/spaces">Home</a></h3>
+  <h3><a href="/requests">Requests</a></h3>
   <form method="post" action="/spaces/new">
     Title: <input type="text" name="title"><br>
     Space description: <input type="text" name="description"><br>
@@ -45,4 +47,5 @@
       </script>
     <input type="submit" value="Add space">
   </form>
+  <img src="http://cdn.wallpapersafari.com/12/8/9oRnCx.jpg" class="img-responsive" alt="Responsive image">
 </body>
