--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,28 +3,36 @@
   <head>
     <meta charset="utf-8">
     <title>Makers BnB</title>
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" type="text/css" href="/style.css" media="screen"> -->
   </head>
   <body>
-    <div class="row">
-      <div class="col-md-8">
-        <h1>Makers BnB</h1>
-      </div>
-      <div class="col-md-4">
-        <button onclick="window.location.href='/users/login'" class="btn-default">Login</button>
-        <button onclick="window.location.href='/users/new'" class="btn-default">Signup</button>
-      </div>
-      <%= message %>
-    </div>
-    <div class="row hero">
-      <div class="col-md-8">
-        <h2>test</h2>
-      </div>
-      <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-2">
 
+        </div>
+        <div class="col-md-6">
+          <h1>Makers BnB</h1>
+        </div>
+        <div class="col-md-4">
+          <button onclick="window.location.href='/users/login'" class="btn btn-default">Login</button>
+          <button onclick="window.location.href='/users/new'" class="btn btn-default">Signup</button>
+        </div>
+        <%= message %>
       </div>
-    </div>
+      <div class="row img">
+        <div class="col-md-12">
+          <style media="screen">
+            .img {
+              height: 600px;
+              background-image: url('https://shoalhavensolosisters.files.wordpress.com/2014/04/valley_of_the_ten_peaks.jpg');
+              background-repeat: no-repeat;
+              background-size: 100%;
+            }
+          </style>
+        </div>
+      </div>
+
 
   </body>
 </html>
