--- a/views/requests/requests.ejs
+++ b/views/requests/requests.ejs
@@ -2,20 +2,38 @@
 <html>
   <head>
     <meta charset="utf-8">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
-<body>
+  <body>
+    <h3><%= message %> </h3>
+    <h3><a href="/spaces">Home</a></h3>
+    <button id="listSpace" type="button" name="button"><a href="/spaces/new" class="btn btn-default">List Space</a></button>
+    <button id="logout" type="button" name="button"><a href="/users/logout" class="btn btn-default">Log out</a></button>
+    <h2>Requests you've made:</h2>
 
-  <%= message %>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Space</th>
+          <th>Description</th>
+          <th>Date available</th>
+          <th>Price per night (in GBP)</th>
+          <th>Host email</th>
+          <th>Contact host</th>
+        </tr>
+      </thead>
 
-  <h2>Requests you've made:</h2>
-
-  <ul>
-
-    <% for(var i=0; i<requests.length; i++) { %>
-      <%= requests[i].spaces.title %> - <%= requests[i].spaces.description %> - <%= requests[i].spaces.date %> - <%= requests[i].spaces.price %> - <%= requests[i].users.email %> 
-      <br>
-      <% } %>
-  </ul>
-
-
-</body>
+      <tbody>
+        <% for(var i=0; i<requests.length; i++) { %>
+        <tr>
+          <td><%= requests[i].spaces.title %></td>
+          <td><%= requests[i].spaces.description %></td>
+          <td><%= requests[i].spaces.date %></td>
+          <td><%= requests[i].spaces.price %></td>
+          <td><%= requests[i].users.email %></td>
+          <td><a href="mailto:<%= requests[i].users.email %>?Subject=MakersBnB%20Request%20for%20<%= requests[i].spaces.title %>">Contact host</a></td>
+        </tr>
+        <% } %>
+      </tbody>
+    </table>
+  </body>
