--- a/views/spaces/viewspaces.ejs
+++ b/views/spaces/viewspaces.ejs
@@ -1,14 +1,37 @@
-<button id="logout" type="button" name="button"><a href="/users/logout">Log out</a></button>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<h3><a href="/requests">Requests</a></h3>
+
+<button id="listSpace" type="button" name="button"><a href="/spaces/new" class="btn btn-default">List Space</a></button>
+<button id="logout" type="button" name="button"><a href="/users/logout" class="btn btn-default">Log out</a></button>
 <%= message %>
 
-<ul>
-  <% for(var i=0; i<spaces.length; i++) { %>
-    <%= spaces[i]['title'] %> - <%= spaces[i]['description'] %> - <%= spaces[i]['price'] %> - <%= spaces[i].users.email %> - <%= spaces[i]['date'] %>
+<table class="table">
 
-    <button id="reqspace" type="button" name="button">
-      <a href= '<%= "/spaces/request/" + spaces[i]["id"]%>'>Request Space</a>
-    </button>
+  <thead>
+    <tr>
+      <th>Space</th>
+      <th>Description</th>
+      <th>Price per night</th>
+      <th>Host email</th>
+      <th>Date available</th>
+      <th>Click to request</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% for(var i=0; i<spaces.length; i++) { %>
+    <tr>
+      <td><%= spaces[i]['title'] %></td>
+      <td><%= spaces[i]['description'] %></td>
+      <td><%= spaces[i]['price'] %></td>
+      <td><%= spaces[i].users.email %></td>
+      <td><%= spaces[i]['date'] %></td>
+      <td>
+        <button id="reqspace" type="button" name="button" class="btn btn-info">
+          <a href= '<%= "/spaces/request/" + spaces[i]["id"]%>'>Request Space</a>
+        </button>
+      </td>
+    </tr>
+    <% } %>
+  </tbody>
 
-    <br>
-  <% } %>
-</ul>
+</table>
