--- a/views/users/new.html
+++ b/views/users/new.html
@@ -6,11 +6,34 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
-    <h2>Signup to Makers BnB</h2>
-    <form class="" action="/users/new" method="POST">
-      <input id="email-address" type="text" name="email" value="" placeholder="Enter email">
-      <input id="password" type="text" name="password" value="" placeholder="Password">
-      <input type="submit" id='signup' value="signup">
-    </form>
+    <h3><a href="/">Home</a></h3>
+    <div class="row">
+      <div class="col-md-4">
+
+      </div>
+      <div class="col-md-4">
+        <div class="form">
+          <h2>Signup to Makers BnB</h2>
+            <form class="" action="/users/new" method="POST">
+              <input id="email-address" type="text" name="email" value="" placeholder="Enter email"><br>
+              <input id="password" type="password" name="password" value="" placeholder="Password"><br>
+              <input class="btn btn-sucess" type="submit" id='signup' value="signup"><br>
+            </form>
+            <style media="screen">
+              .form {
+                border: 1px solid grey;
+                border-radius: 10px;
+                text-align: center;
+                background-color: #D7EDF5;
+                padding: 10px;
+              }
+            </style>
+        </div>
+      </div>
+      <div class="col-md-4">
+
+      </div>
+
+    </div>
   </body>
 </html>
