--- a/views/requests/requests.ejs
+++ b/views/requests/requests.ejs
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
+
   <body>
     <h3><%= message %> </h3>
     <h3><a href="/spaces">Home</a></h3>
@@ -37,3 +38,4 @@
       </tbody>
     </table>
   </body>
+</html>
