--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -6,11 +6,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/public/style.css" media="screen">
   </head>
-
   <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar-justified navbar-default">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -20,16 +18,17 @@
       </button>
       <a class="navbar-brand" href="/">Makers BnB</a>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/spaces">Spaces</a></li>
+        <li><a href="/spaces/new">List Space</a></li>
         <li><a href="/requests">Requests</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><button onclick="window.location.href='/users/logout'" id="logout" name="button" class="btn btn-default">Log out</button></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
+
+<div class="alert alert-info"><%=message%></div>
