--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,9 @@
 
-    <div class="center jumbotron">
+    <div class="center jumbotron" id="home-img">
       <div class="transparent-grey">
         <h1>Welcome to Makers BnB</h1>
         <button onclick="window.location.href='/users/login'" class="btn btn-default">Login</button>
         <button onclick="window.location.href='/users/new'" class="btn btn-default">Signup</button>
-      <%= message %>
       </div>
     </div>
 
