--- a/views/spaces/viewspaces.ejs
+++ b/views/spaces/viewspaces.ejs
@@ -1,8 +1,4 @@
-
-<button id="listSpace" type="button" name="button"><a href="/spaces/new" class="btn btn-default">List Space</a></button>
-<button id="logout" type="button" name="button"><a href="/users/logout" class="btn btn-default">Log out</a></button>
-<%= message %>
-
+<h2>Available Spaces:</h2>
 <table class="table">
   <thead>
     <tr>
@@ -24,7 +20,7 @@
       <td><%= spaces[i].users.email %></td>
       <td><%= spaces[i]['date'] %></td>
       <td>
-        <button id="reqspace" type="button" name="button" class="btn btn-info">
+        <button id="reqspace" type="button" name="button" class="btn btn-default">
           <a href= '<%= "/spaces/request/" + spaces[i]["id"]%>'>Request Space</a>
         </button>
       </td>
