--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,36 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Login to Makers BnB</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  </head>
 
-  <body>
-    <h3><a href="/">Home</a></h3>
-      <div class="row">
-        <div class="col-md-4"></div>
-          <div class="col-md-4">
-            <div class="form">
-              <h1>Login to Makers BnB</h1>
-              <%= message %>
-                <form class="" action="/users/login" method="post">
-                  <input id="email-address" type="text" name="email" value="" placeholder="Enter email"><br>
-                  <input id="password" type="password" name="password" value="" placeholder="Password"><br>
-                  <input class="btn btn-sucess" type="submit" id='login' value="login"><br>
-                </form>
-                <style media="screen">
-                  .form {
-                    border: 1px solid grey;
-                    border-radius: 10px;
-                    text-align: center;
-                    background-color: #A4C5FE;
-                    padding: 10px;
-                  }
-                </style>
-            </div>
-          </div>
-        <div class="col-md-4"></div>
-      </div>
-  </body>
+<div class="center jumbotron" id="login-img">
+  <div class="form">
+    <h2>Login</h2>
+      <form class="" action="/users/login" method="post">
+        <input id="email-address" type="text" class="form-control" name="email" value="" placeholder="Enter email"><br>
+        <input id="password" type="password" class="form-control" name="password" value="" placeholder="Password"><br>
+        <input class="btn btn-default" type="submit" id='login' value="Login"><br>
+      </form>
+  </div>
+</div>
+</body>
 </html>
