Jasmine tests passing

--- a/views/spaces/new.ejs
+++ b/views/spaces/new.ejs
@@ -15,7 +15,7 @@
           <i data-date-icon="icon-calendar"></i>
         </span>
       </div>
-      <input type="submit" class="btn btn-default" value="Add Space">
+        <input type="submit" id="add-space" class="btn btn-default" value="Add Space">
     </form>
 
       <script type="text/javascript"
