--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -5,7 +5,7 @@
       <form class="" action="/users/new" method="post">
         <input id="email-address" type="text" class="form-control" name="email" value="" placeholder="Enter email"><br>
         <input id="password" type="password" class="form-control" name="password" value="" placeholder="Password"><br>
-        <input class="btn btn-default" type="submit" id='login' value="Sign Up"><br>
+        <input class="btn btn-default" type="submit" id='signup' value="Sign Up"><br>
       </form>
   </div>
 </div>
