Flashing error messages, redirecting when logged in

--- a/views/spaces/viewspaces.ejs
+++ b/views/spaces/viewspaces.ejs
@@ -4,6 +4,7 @@
 <button id="listSpace" type="button" name="button"><a href="/spaces/new" class="btn btn-default">List Space</a></button>
 <button id="logout" type="button" name="button"><a href="/users/logout" class="btn btn-default">Log out</a></button>
 <%= message %>
+<%= listedMessage %>
 
 <table class="table">
   <thead>
