--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -5,8 +5,9 @@
     <title>Makers BnB</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
-  
+
   <body>
+
     <h3><a href="/">Home</a></h3>
     <div class="row">
       <div class="col-md-4"></div>
@@ -14,10 +15,12 @@
           <div class="form">
             <h2>Signup to Makers BnB</h2>
               <form class="" action="/users/new" method="POST">
-                <input id="email-address" type="text" name="email" value="" placeholder="Enter email"><br>
+                <input id="email-address" type="email" name="email" value="" placeholder="Enter email" required><br>
                 <input id="password" type="password" name="password" value="" placeholder="Password"><br>
                 <input class="btn btn-sucess" type="submit" id='signup' value="signup"><br>
               </form>
+                <%= message %>
+
               <style media="screen">
                 .form {
                   border: 1px solid grey;
