--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,16 +1,13 @@
-    <div class="row">
-      <div class="col-md-4"></div>
-        <div class="col-md-4">
-          <div class="form">
-            <h2>Signup to Makers BnB</h2>
-              <form class="" action="/users/new" method="POST">
-                <input id="email-address" type="email" name="email" value="" placeholder="Enter email" required><br>
-                <input id="password" type="password" name="password" value="" placeholder="Password"><br>
-                <input class="btn btn-sucess" type="submit" id='signup' value="signup"><br>
-              </form>
-            </div>
-          </div>
-        <div class="col-md-4"></div>
-      </div>
-    </body>
-  </html>
+
+<div class="center jumbotron" id="login-img">
+  <div class="form">
+    <h2>Sign Up</h2>
+      <form class="" action="/users/new" method="post">
+        <input id="email-address" type="text" class="form-control" name="email" value="" placeholder="Enter email"><br>
+        <input id="password" type="password" class="form-control" name="password" value="" placeholder="Password"><br>
+        <input class="btn btn-default" type="submit" id='signup' value="Sign Up"><br>
+      </form>
+  </div>
+</div>
+</body>
+</html>
